# rs_mounter

./: Cargo.toml  README.MD
src/: lib.rs
src/base/traits/: homepage_provider.rs  metadata_provider.rs
src/core/: bridge.rs  mod.rs
src/core/client/: homepage.rs  manga.rs  metadata.rs  mod.rs  search.rs  source.rs
src/core/extension/: homepage.rs  manga.rs  metadata.rs  mod.rs  search.rs  source.rs
src/core/traits/: homepage_provider.rs  manga_provider.rs  mod.rs  search_provider.rs  source_provider.rs
src/core/wasm/: adapter.rs  mod.rs  structure.rs
