[package]
name = "torigen_mounter"
version = "0.3.0"
edition = "2024"
description = "Core functionality for Torigen, a tool for mounting and managing Tor hidden services."
license = "MIT"
repository = "https://github.com/Torigen-manga/rs_mounter"
homepage = "https://github.com/Torigen-manga/rs_mounter"
readme = "README.md"
keywords = ["torigen", "manga", "wasm"]
authors = ["Notreallyuri <yurivgr@icloud.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde"] }